2005-08-10  Frank Ch. Eigler  <fche@elastic.org>

	PR translator/1186
	* elaborate.cxx (resolve_2types): Accept a flag to tolerate unresolved
	expression types.
	(visit_functioncall): Call it thusly.
	* translate.cxx (emit_function): Tolerate void functions.
	* stap.1.in: Document possibility of void functions.
	* tapset/builtin_{log,printk,warn}.stp: Make these void functions.
	* testsuite/buildok/nine.stp, semok/eighteen.stp: New tests.

2005-08-10  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx: Correct hex/decimal misformatting of verbose messages.
	* main.cxx: Add formal "-h" and "-V" options.
	* stap.1.in: Document them.

2005-08-10  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx: Move around "focusing on ..." messages to print
	them only for matching functions/modules.
	(dwflpp ctor): Also add cu (source file) name to derived
	probe point.

2005-08-09  Graydon Hoare  <graydon@redhat.com>

	* testsuite/parseok/nine.stp: Update
	* testsuite/semok/{six,seven,eleven,seventeen}.stp: Update.

2005-08-09  Graydon Hoare  <graydon@redhat.com>

	* staptree.{cxx,h} 	
	(target_symbol): New struct.	
	(*_visitor::visit_target_symbol): Support it.
	(visitor::active_lvalues)
	(visitor::is_active_lvalue)
	(visitor::push_active_lvalue)
	(visitor::pop_active_lvalue): Support lvalue-detection.
	(delete_statement::visit)
	(pre_crement::visit)
	(post_crement::visit)
	(assignment::visit): Push and pop lvalue expressions.
	* elaborate.{cxx,h} 
	(lvalule_aware_traversing_visitor): Remove class.
	(no_map_mutation_during_iteration_check)
	(mutated_map_collector): Update lvalue logic.
	(typeresolution_info::visit_target_symbol): Add, throw error.
	* parse.{cxx,h}
	(tt2str)
	(tok_is)
	(parser::expect_*)
	(parser::peek_*): New helpers.
	(parser::parse_symbol): Rewrite, support target_symbols.
	* translate.cxx (c_unparser::visit_target_symbol): Implement.
	* tapsets.cxx (var_expanding_copy_visitor): Update lvalue logic,
	change visit_symbol to visit_target_symbol.
