@@ -1,3 +1,10 @@
+2005-08-10  Graydon Hoare  <graydon@redhat.com>
+
+	* tapsets.cxx 
+	(dwflpp::global_addr_of_line_in_cu): Implement next-line heuristic.
+	(dwarf_query::get_number_param): Dwarf_Addr variant.
+	(query_cu): Add line-selecting variant for function iteration.
+
 2005-08-10  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR translator/1186
